route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test
  namespace: demo
spec:
  hostnames:
  - private.hcpapps.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external
    namespace: demo
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: toystore
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
